@@ -8,33 +8,36 @@ leave a gap.  Chord tremolo beams on half notes are not ambiguous,
 as half notes cannot appear in a regular beam, and should reach the 
 stems.
 
+In this example, each tremolo lasts exactly one measure.
+
 (To ensure that the spacing engine is not confused we add some regular notes as well.) 
 "
 }
   
 \score { 
   \context Voice \notes\relative c' {
-        % huh -> one beam missing!
-	\repeat "tremolo" 16 { d16 e }
+	\time 4/4
+	\repeat "tremolo" 16 { d32 e }
 	\repeat "tremolo" 8 { d16 e }
-	\repeat "tremolo" 4 { d e }
-	\repeat "tremolo" 2 { d e }
-	c4
-	\break
-	\repeat "tremolo" 4 { f'8 e }
-	\repeat "tremolo" 2 { f e }
-	c4 c4
+	\repeat "tremolo" 4 { d8 e }
 
-	\repeat "tremolo" 3 { f8 e }
-	c4
-	c4 c4 c4 c4
-	c4 c4 c4 c4
-	c4 c4 c4 c4
+	\time 3/4
+	\repeat "tremolo" 12 { d32 e }
+	\repeat "tremolo" 6 { d16 e } 
+	\repeat "tremolo" 3 { d8 e } 
 
+	\time 2/4
+	\repeat "tremolo" 8 { d32 e }
+	\repeat "tremolo" 4 { d16 e }
+	\repeat "tremolo" 2 { d8 e }
+
+	\time 1/4
+	\repeat "tremolo" 4 { d32 e }
+	\repeat "tremolo" 2 { d16 e }
+
+	c4 c4 c4 c4 c4 
   }
-  \paper {
-    linewidth = 90*\staffspace
-  }  
+
   \midi { }
 }
 %% new-chords-done %%
